# yac8

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
include/: cli.h  cpu.h  fontset.h  instruction.h  instruction_set.h  memory.h  platform.h  stack.h  timer.h  yac_version.h.in
src/: cli.c  cpu.c  instruction.c  instruction_set.c  main.c  memory.c  platform.c  stack.c  timer.c
